<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar" />


    <TextView
        android:id="@+id/tvRegTituloClasesUY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:gravity="center_horizontal"
        android:text="@string/reg_titulo"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/etRegUsuarioEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="188dp"
        android:layout_marginRight="188dp"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegTituloClasesUY" />

    <EditText
        android:id="@+id/etRegUsuarioPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:hint="@string/reg_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegUsuarioEmail" />

    <Button
        android:id="@+id/btnRegOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"

        android:text="@string/btn_Registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegUsuarioPassword" />

    <TextView
        android:id="@+id/textMSG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/etRegUsuarioEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegTituloClasesUY" />


</androidx.constraintlayout.widget.ConstraintLayout>